# SearchCuts

./: Cargo.toml  config.sh  readme.md  reset.sh  start.sh  stop.sh  test.py  zip.conner.SearchCuts.desktop  zip.conner.SearchCuts.search-provider.ini  zip.conner.SearchCuts.service
sc-macros/: Cargo.toml
sc-macros/src/: lib.rs
src/: ai_stuff.rs  bus_stuff.rs  keyboard.rs  logic.rs  main.rs  searchcuts.rs
