workspace = { members = ["sc-macros"] }
[package]
name = "searchcuts-prov"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3.4.1"
# dbus = "0.9"
dbus = "0.6"
dotenv = "0.15.0"
enigo = "0.3.0"
once_cell = "1.20.3"
rig-core = "0.9.1"
sc-macros = {path ="./sc-macros"}
tokio = {version="1.44.0",features = ["full"]}
uinput = "0.1.3"
